crates/dlin-core/src/render/snapshots/dlin_core__render__dot__tests__snapshot_direction_tb.snap
---
source: src/render/dot.rs
expression: output
---
digraph dbt_lineage {
  rankdir=TB;
  node [shape=box, style=filled, fontname="Helvetica"];

  "exposure.dashboard" [label="exp:dashboard", fillcolor="#E74C3C", fontcolor="white"];
  "model.orders" [label="orders", fillcolor="#4A90D9", fontcolor="white"];
  "model.stg_orders" [label="stg_orders", fillcolor="#4A90D9", fontcolor="white"];
  "source.raw.orders" [label="src:raw.orders", fillcolor="#27AE60", fontcolor="white"];
  "test.orders_positive" [label="test:orders_positive", fillcolor="#1ABC9C", fontcolor="white"];

  "model.orders" -> "exposure.dashboard" [label="exposure", style=bold];
  "model.orders" -> "test.orders_positive" [label="test", style=dotted];
  "model.stg_orders" -> "model.orders" [label="ref"];
  "source.raw.orders" -> "model.stg_orders" [label="source", style=dashed];
}
